--- a/work.html
+++ b/work.html
@@ -4,120 +4,74 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Simple Theme</title>
+<title>Amritpal Singh: Developer, Designer, Learner.</title>
 <link href="css/common.css" rel="stylesheet" type="text/css">
 <link href="main.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
- <nav>
-     <ul id="menu" class="tabs  primary-nav">
-          <li class="tabs__item"><a href="Home.html" class="tabs__link" id="home-page">Home</a></li>
-          <li class="tabs__item"><a href="work.html" class="tabs__link" id="work-page">Work</a></li>
-          <li class="tabs__item"><a href="contact.html" class="tabs__link" id="contact-page">Contact</a></li>
-     </ul>
- </nav>
- <p>
- 	
- </p>
- <p id="inv">
- 	
- </p>
- <div class="gap">
- 	
- </div>
-  <section>
-    <h2 class="noDisplay">Main Content</h2>
-<article class="left_article">
-     <h3 class="header">EDUCATION</h3>
-         <p>Like it's always said, Education is the building pillar of our career. I always laid more stress on getting practical knowledge.</p>
-         <p>Here are my latest education profiles: </p>
-         <p>(ordered-anti-chronologically) </p>
-         <p>&nbsp;</p>
-    </article>
-    <div class="columns">
-	  
-	  </div>
-	  
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="images/education/georgian-college-accelerator-icon.png" alt="" class="thumbnail"/> </p>
-      <h4>COMPUTER PROGRAMMER: GEORGIAN COLLEGE</h4>
-      <p>In this program, students focus on computer programming, web development, and designing data-driven systems. Students learn how to write code in a variety of programming languages such as Arduino, ASP.NET, C#, Java, JavaScript, HTML/CSS, PHP and Swift. </p>
-      <p>GPA: TBA</p>
-    </div>
-    <article class="left_article">
-         <h3 class="header">SKILL SET</h3>
-<p class="details">I spend most of my time developing skills. My acquired skills are based on my interests which mainly consists of web development, virtualization, application development, office and mobile application development. </p>
-    </article>
-    <article class="placeholder"> </article>
-</section>
-  <div class="row">
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="images/skills/icons/011-html-5.svg" alt="" class="thumbnail"/> </p>
-      <h4>HTML</h4>
-      <p>Hypertext Markup Language (HTML) is more than just adding heads, bodys and paragraphs. I am proficient in HTML forms and tables. Apparently, the most difficult out of all HTML tags.</p>
-      <p>Skill Level: &nbsp;4.8/5</p>
-    </div>
-<div class="columns">
-     <p class="thumbnail_align"> <img src="images/skills/icons/010-css-3.svg" alt="" class="thumbnail inv"/> </p>
-     <h4>CSS</h4>
-     <p>One rarely gets to know the true power of CSS. Don't believe me? Check out some awesome projects on Codepen. Warning: these will make you look like a total novice.</p>
-     <p> Skill Level: 4.3/5 </p>
-</div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="images/skills/icons/008-java.svg" alt="" class="thumbnail"/> </p>
-      <h4>JAVA</h4>
-      <p>I am still in early times of java development. But I am pretty confident that I will be able to develop new and exciting kinds of projects.</p>
-      <p> Skill Level 4.6/5 </p>
-    </div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="images/skills/icons/007-excel-file.svg" alt="" class="thumbnail inv"/> </p>
-      <h4>EXCEL</h4>
-      <p>I am an intermediate user in Microsoft Excel. Most of my skills on this powerful spreadsheet software are: formulas, KPIs, Data validation, Forms, Checklists PivotTables and many more.</p>
-      <p> Skill Level 4.6/5 </p>
-    </div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="images/skills/icons/006-wordpress.svg" alt="" class="thumbnail"/> </p>
-      <h4>WORDPRESS</h4>
-      <p>I am fairly new to wordpress as well. But as per my knowledge, it is one of the most used software in the industry.</p>
-      <p> Skill Level: Fairly New, Enthusiast About this.</p>
-    </div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="images/skills/icons/720px-Arduino_Logo.svg.png" alt="" class="thumbnail reduce"/> </p>
-      <h4>ARDUINO</h4>
-      <p>I was amazed by this awesome piece of software that helped me achieve new levels of awesomeness. I place a finger next to a light sensor, an LED turns on. Would love to carry forward its knowledge.</p>
-      
-    </div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="images/skills/icons/005-photoshop.svg" alt="" class="thumbnail"/> </p>
-      <h4>PHOTOSHOP</h4>
-      <p>I am fairly good in using photoshop. I have done many projects on this one. I have designed fair amount of awesome images with this software.</p>
-      <p> Skill Level: 3.9/5</p>
-    </div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="images/skills/icons/009-js.svg" alt="" class="thumbnail"/> </p>
-      <h4>JAVASCRIPT</h4>
-      <p>I am very new Javascript. But I love this language. One of the most demanded and powerful language. I am pretty sure that one day, I will become master of Javascript. Atleast, I hope so.</p>
-      <p> Skill Level: 1.2/5 </p>
-    </div>
-    
-  </div>
-  <div class="row blockDisplay">
-    <div class="column_half left_half"> </div>
-    <div class="column_half right_half">
-         <h2 class="column_title">I would Love to Hear from you.</h2>
-    </div>
-  </div>
-  <div class="social">
-    <p class="social_icon"><a href="https://github.com/teamrit"><img src="images/icons/svg/004-github-logo.svg" width="439" alt="" class="thumbnail2"></a></p>
-    <p class="social_icon"><a href="https://www.linkedin.com/in/amrit-pal-singh-390333129/"><img src="images/icons/svg/003-linkedin-logo.svg" width="100" alt="" class="thumbnail2"></a></p>
-    <p class="social_icon"><a href="mailto:amritpalsingha4@gmail.com"><img src="images/icons/svg/002-close-envelope.svg" width="150" alt="" class="thumbnail2"></a></p>
-    <p class="social_icon"><img src="images/icons/svg/001-phone-receiver.svg" width="150" alt="" class="thumbnail2"/></p>
-  </div>
-  <footer class="secondary_header footer">
-    <div class="copyright">&copy;2018- teAMRIT. </div>
-  </footer>
+     <nav>
+          <ul id="menu" class="tabs  primary-nav">
+               <li class="tabs__item"><a href="index.html" class="tabs__link" id="home-page">Home</a></li>
+               <li class="tabs__item"><a href="work.html" class="tabs__link" id="work-page">Work</a></li>
+               <li class="tabs__item"><a href="contact.html" class="tabs__link" id="contact-page">Contact</a></li>
+          </ul>
+     </nav>
+     <img src="images/my-work.jpg" class="bg" alt="">
+     <p id="white"> </p>
+     <div class="gap"> </div>
+     <section>
+          <h2 class="noDisplay">Main Content</h2>
+          <article class="left_article">
+               <h3 class="header">WORK</h3>
+               <p>Most of my work are based on given assignments.</p>
+               <p>Click on any tab to view respective projects. </p>
+          </article>
+          <article class="placeholder"> </article>
+          <article class="placeholder"> </article>
+          <article class="placeholder"> </article>
+          <article class="left_article">
+               <div class="tab">
+                    <button class="tablinks" onclick="showTab(event, 'Application')">Application </button>
+                    <button class="tablinks" onclick="showTab(event, 'Web')">Web Development</button>
+                    <button class="tablinks" onclick="showTab(event, 'Arduino')">Arduino Project</button>
+               </div>
+               <div id="Application" class="tabcontent">
+                    <h3>Most of my application development is based on Java </h3>
+                    <div class="social_icon"><a href="https://github.com/teamrit/Java-In-Class"><img src="images/icons/svg/004-github-logo.svg" width="439" alt="" class="thumbnail2"></a></div>
+                    <p>Most of my projects are regarding simple input and output commands. In addition to that, I have worked on some projects regarding arrays. </p>
+               </div>
+               <div id="Web" class="tabcontent">
+                    <h3>My web projects are based on HTML5, CSS3 and JS.</h3>
+                    <div class="social_icon"> <a href="https://github.com/teamrit/html-projects"><img src="images/icons/svg/004-github-logo.svg" width="439" alt="" class="thumbnail2"></a></div>
+                    <p>Here are some of my work. Click on the github link below.&nbsp;Most of my projects are regarding simple design and markup templates and websites. In addition to that, I have worked on some projects regarding javascript. </p>
+               </div>
+               <div id="Arduino" class="tabcontent">
+                    <h3>Arduino</h3>
+                    <div class="social_icon"><a href="https://github.com/teamrit/ArduinoProjects"><img src="images/icons/svg/004-github-logo.svg" width="439" alt="" class="thumbnail2"></a></div>
+                    <p>I have worked on a realtime clock and countdown clock which works on a DS1302 chip that uses a cell and also uses rotation pin for setting the counter.</p>
+               </div>
+          </article>
+          <article class="placeholder"> </article>
+          <div class="row blockDisplay">
+               <div class="column_half left_half"> </div>
+               <div class="column_half right_half">
+                    <h2 class="column_title">I would Love to Hear from you.</h2>
+               </div>
+          </div>
+          <div class="social">
+               <p class="social_icon"><a href="https://github.com/teamrit"><img src="images/icons/svg/004-github-logo.svg" width="439" alt="" class="thumbnail2"></a></p>
+               <p class="social_icon"><a href="https://www.linkedin.com/in/amrit-pal-singh-390333129/"><img src="images/icons/svg/003-linkedin-logo.svg" width="100" alt="" class="thumbnail2"></a></p>
+               <p class="social_icon"><a href="mailto:amritpalsingha4@gmail.com"><img src="images/icons/svg/002-close-envelope.svg" width="150" alt="" class="thumbnail2"></a></p>
+               <p class="social_icon"><img src="images/icons/svg/001-phone-receiver.svg" width="150" alt="" class="thumbnail2"/></p>
+          </div>
+          <footer class="secondary_header2 footer"> 
+               <script type="text/javascript" src="script/aos.js"></script>
+               <div class="copyright">&copy;2018- teAMRIT. </div>
+          </footer>
+     </section>
 </div>
 </body>
 </html>
