--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
           </div>
           <div class="social">
                <p class="social_icon"><a href="https://github.com/teamrit"><img src="images/icons/svg/004-github-logo.svg" width="439" alt="" class="thumbnail2"></a></p>
-               <p class="social_icon"><a href="https://www.linkedin.com/in/amrit-pal-singh-390333129/"><img src="images/icons/svg/003-linkedin-logo.svg" width="100" alt="" class="thumbnail2"></a></p>
+               <p class="social_icon"><a href="https://www.linkedin.com/in/teamrit/"><img src="images/icons/svg/003-linkedin-logo.svg" width="100" alt="" class="thumbnail2"></a></p>
                <p class="social_icon"><a href="mailto:amritpalsingha4@gmail.com"><img src="images/icons/svg/002-close-envelope.svg" width="150" alt="" class="thumbnail2"></a></p>
                <p class="social_icon"><img src="images/icons/svg/001-phone-receiver.svg" width="150" alt="" class="thumbnail2"/></p>
           </div>
