--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="refresh" content="0; URL='http://teamrit.azurewebsites.net'" />
 <title>Amritpal Singh: Developer, Designer, Learner.</title>
 <link href="css/common.css" rel="stylesheet" type="text/css">
 <link href="main.css" rel="stylesheet" type="text/css">
