--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="refresh" content="0; URL='http://teamrit.azurewebsites.net'" />
+<meta http-equiv="refresh" content="0; URL='http://teamrit.netlify.com'" />
 
 <title>... Site moved to a new location</title>
 </head>
@@ -10,6 +10,6 @@
 <body>
 <p style="color: black">
 Redirecting...
-If not redirected... Click <a href="http://teamrit.azurewebsites.net">here</a></p>
+If not redirected... Click <a href="http://teamrit.netlify.com">here</a></p>
 </body>
 </html>
